tests/ui/issues/issue-77919.stderr
error[E0412]: cannot find type `PhantomData` in this scope
  --> $DIR/issue-77919.rs:9:9
   |
LL |     _n: PhantomData,
   |         ^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use std::marker::PhantomData;
   |

error[E0412]: cannot find type `VAL` in this scope
  --> $DIR/issue-77919.rs:11:63
   |
LL | impl<N, M> TypeVal<usize> for Multiply<N, M> where N: TypeVal<VAL> {}
   |                                                               ^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL | impl<N, M, VAL> TypeVal<usize> for Multiply<N, M> where N: TypeVal<VAL> {}
   |          +++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
